# coro.cpp

./: CMakeLists.txt  CMakePresets.json
src/: animation.cpp  basic_type.hpp  common.hpp  common_awaitables.hpp  concepts.hpp  debug.hpp  different_threads.cpp  fd_coroutine.hpp  fd_coroutines.cpp  fd_timers.hpp  linux_term.hpp  main.cpp  parallel_demo.cpp  threaded_task.hpp  timers.cpp
